[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/user_input/inspector.gd" type="Script" id=1]

[node name="UserInputType" type="ScrollContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 246.0
margin_bottom = 157.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInput" type="VBoxContainer" parent="."]
margin_right = 239.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PromptFroLabel" type="Label" parent="UserInput"]
margin_right = 239.0
margin_bottom = 14.0
text = "Ask player"

[node name="PromptFor" type="TextEdit" parent="UserInput"]
margin_top = 18.0
margin_right = 239.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
breakpoint_gutter = true
fold_gutter = true
wrap_enabled = true

[node name="DirectToLabel" type="Label" parent="UserInput"]
margin_top = 93.0
margin_right = 239.0
margin_bottom = 107.0
text = "Direct user input to variable"

[node name="DirectToVariable" type="OptionButton" parent="UserInput"]
margin_top = 111.0
margin_right = 239.0
margin_bottom = 131.0

[node name="MarginContainer" type="MarginContainer" parent="UserInput"]
margin_top = 135.0
margin_right = 239.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
